--- a/src/main/resources/templates/agent/frm/infos-emploi-frag.html
+++ b/src/main/resources/templates/agent/frm/infos-emploi-frag.html
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head><meta charset="UTF-8"/></head>
-    <body>
-		<th:block th:fragment="infos-emploi-frag">
-        	<div class="panel panel-default">
-            	<div class="panel-heading"><a href="#infos-emploi" data-toggle="collapse" >Informations liées à l'emploi</a></div>
-                <div class="panel-body panel-collapse collapse" id="infos-emploi">
-                    <div class="col col-lg-2 ">
-                        <div class="form-group">
-							<label for="matricule">Matricule</label> <span class="error-msg text-danger" id="matricule-error-msg"></span>
-	                        <input id="matricule" name="matricule" class="form-control" type="text" />
-                        </div>
-                    </div>
-                    <div class="col col-lg-2">
-                        <div class="form-group">
-                            <label for="fonction">Fonction</label>
-                            <span class="error-msg text-danger" id="fonction-error-msg"></span>
-                            <select name="fonction" id="fonction" class="form-control" required="required">
-                                <option value=""></option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col col-lg-2">
-                        <div class="form-group">
-                            <label for="grade">Grade</label>
-                            <span class="error-msg text-danger" id="grade-error-msg"></span>
-                            <select name="grade" id="grade" class="form-control" required="required">
-                                <option value=""></option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col col-lg-3">
-                        <div class="form-group">
-                            <label for="datePriseService1">1ère prise de service</label>
-                            <span class="error-msg text-danger" id="datePriseService1-error-msg"></span>                            
-                            <input type="date" class="form-control" id="datePriseService1" name="datePriseService1"/>                            
-                        </div>
-                    </div>                                        
-                    <div class="col col-lg-3">
-                        <div class="form-group">
-                            <label for="emploi">Emploi</label>
-                            <span class="error-msg text-danger" id="emploi-error-msg"></span>
-                            <select name="emploi" id="emploi" class="form-control" required="required">
-                                <option value=""></option>
-                            </select>
-                        </div>
-                    </div>
 
+<head>
+    <meta charset="UTF-8" />
+</head>
+
+<body>
+    <th:block th:fragment="infos-emploi-frag">
+        <div class="panel panel-default">
+            <div class="panel-heading"><a href="#infos-emploi" data-toggle="collapse">Informations liées à l'emploi</a></div>
+            <div class="panel-body panel-collapse collapse" id="infos-emploi">
+                <div class="col col-lg-3 ">
+                    <div class="form-group">
+                        <label for="matricule">Matricule</label> <span class="error-msg text-danger" id="matricule-error-msg"></span>
+                        <input id="matricule" name="matricule" class="form-control" type="text" th:value="${agent.matricule}" />
+                    </div>
                 </div>
-       		</div>
-      	</th:block>
-    </body>
+                <div class="col col-lg-2">
+                    <div class="form-group">
+                        <label for="fonction">Fonction</label>
+                        <span class="error-msg text-danger" id="fonction-error-msg"></span>
+                        <select name="nomFonction" id="fonction" class="form-control" required="required" th:value="${nomFonction}">
+                                <option ></option>
+                                <option th:each="f:${fonctions}" th:value="${f.nomFonction}" th:text="${f.nomFonction}"></option>
+                            </select>
+                    </div>
+                </div>
+                <div class="col col-lg-1">
+                    <div class="form-group">
+                        <label for="grade">Grade</label>
+                        <span class="error-msg text-danger" id="grade-error-msg"></span>
+                        <select name="nomGrade" id="grade" class="form-control" required="required" th:value="${nomGrade}">
+                                <option ></option>
+                                <option th:each="g:${grades}" th:value="${g.nomGrade}" th:text="${g.nomGrade}"></option>
+                            </select>
+                    </div>
+                </div>
+                <div class="col col-lg-2">
+                    <div class="form-group">
+                        <label for="datePriseService1">1ère prise de service</label>
+                        <span class="error-msg text-danger" id="datePriseService1-error-msg"></span>
+                        <input type="date" class="form-control" id="datePriseService1" name="datePriseService1" th:value="${agent.datePriseService1}" />
+                    </div>
+                </div>
+                <div class="col col-lg-4">
+                    <div class="form-group">
+                        <label for="emploi">Emploi</label>
+                        <span class="error-msg text-danger" id="emploi-error-msg"></span>
+
+                        <select name="nomEmploi" id="emploi" class="form-control" required="required" th:value="${nomEmploi}">                        
+                                <option ></option>
+                                <option th:each="e:${emplois}" th:value="${e.nomEmploi}" th:text="${e.nomEmploi}"></option>
+                            </select>
+                    </div>
+                </div>
+                <script src="https:://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+                </script>
+
+
+            </div>
+        </div>
+    </th:block>
+</body>
+
 </html>
