--- a/src/main/resources/templates/agent/frm/infos-generales-frag.html
+++ b/src/main/resources/templates/agent/frm/infos-generales-frag.html
@@ -11,25 +11,25 @@
                     <div class="col col-lg-4">
                         <div class="form-group">
 							<label for="nom">Nom</label> <span class="error-msg text-danger" id="nom-error-msg"></span>
-	                        <input id="nom" name="nom" class="form-control" type="text" required="required"/>
+	                       <input th:value="${agent.nom}"id="nom" name="nom" class="form-control" type="text" required="required" />
                         </div>
                     </div>
                     <div class="col col-lg-4">
                         <div class="form-group">
 							<label for="prenom">Prénom</label> <span class="error-msg text-danger" id="prenom-error-msg"></span>
-	                        <input id="prenom" name="prenom" class="form-control" type="text" required="required"/>
+	                        <input id="prenom" name="prenom" class="form-control" type="text" required="required" th:value="${agent.prenom}"/>
                         </div>                    
                     </div>
                     <div class="col col-lg-3">
                         <div class="form-group">
-							<label for="dateNaissance">Date de naissance</label> <span class="error-msg text-danger" id="dateNaissance-error-msg"></span>
-	                        <input id="dateNaissance" name="dateNaissance" class="form-control" type="date" required="required"/>
+							<label for="dateNaissance" id="lbl-dateNaissance">Date de naissance</label> <span class="error-msg text-danger" id="dateNaissance-error-msg"></span>
+	                        <input id="dateNaissance" name="dateNaissance" class="form-control" type="date" required="required" th:value="${agent.dateNaissance}"/>
                         </div>                    
                     </div>
                     <div class="col col-lg-1">
                         <div class="form-group">
 							<label for="sexe">Sexe</label> <span class="error-msg text-danger" id="sexe-error-msg"></span>
-	                        <select id="sexe" name="sexe" class="form-control" required="required">
+	                        <select id="sexe" name="sexe" class="form-control" required="required" th:value="${agent.sexe}">
 	                        	<option value=""></option>
 	                        	<option value="HOMME">H</option>
 	                        	<option value="FEMME">F</option>
@@ -40,14 +40,14 @@
                     <!-- /*================================================LIGNE 2====================================*/   -->
                     <div class="col col-lg-4">
                         <div class="form-group">
-							<label for="email">Email</label> <span class="error-msg text-danger" id="email-error-msg"></span>
-	                        <input id="email" name="email" class="form-control" type="email" required="required"/>
+							<label for="email" id="lbl-email">Email</label> <span class="error-msg text-danger" id="email-error-msg"></span>
+	                        <input id="email" name="email" class="form-control" type="email" required="required" th:value="${agent.email}"/>
                         </div>
                     </div>
                     <div class="col col-lg-4">
                         <div class="form-group">
 							<label for="lieuNaissance">Lieu de naissance</label> <span class="error-msg text-danger" id="lieuNaissance-error-msg"></span>
-	                        <select id="lieuNaissance" name="lieuNaissance" class="form-control" required="required">
+	                        <select id="lieuNaissance" name="lieuNaissance" class="form-control" required="required" th:value="${agent.lieuNaissance}">
 	                        	<option>ABIDJAN</option>
 	                        	<option>GRAND-LAHOU</option>
 	                        </select>
@@ -55,23 +55,23 @@
                     </div>                     
                     <div class="col col-lg-2">
                         <div class="form-group">
-							<label for="fixeBureau">Fixe de bureau</label> <span class="error-msg text-danger" id="fixeBureau-error-msg"></span>
-	                        <input id="fixeBureau" name="fixeBureau" class="form-control" type="text" required="required"/>
+							<label for="fixeBureau" id="lbl-fixeBureau">Fixe de bureau</label> <span class="error-msg text-danger" id="fixeBureau-error-msg"></span>
+	                        <input id="fixeBureau" name="fixeBureau" class="form-control" type="text" required="required" th:value="${agent.fixeBureau}"/>
                         </div>                    
                     </div>                    
                     <div class="col col-lg-2">
                         <div class="form-group">
-							<label for="tel">Mobile</label> <span class="error-msg text-danger" id="tel-error-msg"></span>
-	                        <input id="tel" name="tel" class="form-control" type="tel" required="required"/>
+							<label for="tel" id="lbl-tel">Mobile</label> <span class="error-msg text-danger" id="tel-error-msg"></span>
+	                        <input id="tel" name="tel" class="form-control" type="tel" required="required" th:value="${agent.tel}"/>
                         </div>                    
                     </div>
 
                     <!-- /*================================================LIGNE 3====================================*/   -->
                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-2">
                         <div class="form-group">
-                            <label for="typePiece">Tyepe de pièce</label>
+                            <label for="typePiece">Type de pièce</label>
                             <span class="error-msg" id="typePiece-error-msg"></span>
-                            <select class="form-control" id="typePiece">
+                            <select class="form-control" id="typePiece" th:value="${agent.typePiece}">
                                 <option value=""></option>
                                 <option value="CNI">CNI</option>
                                 <option value="ATTESTATION D'IDENTITE">Attestation d'identité</option>
@@ -83,23 +83,27 @@
                     </div>
                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-2">
                         <div class="form-group">
-                            <label for="numPiece">N° pièce</label> 
-                            <span class="error-msg" id="numPiece-error-msg"></span>
-                            <input id="numPiece" class="form-control" type="text" name="numPiece" required="required">
+                            
+                        	<label for="numPiece" id="lbl-numPiece">N° Pièce</label> 
+                            <span class="error-msg" id="numPiece-error-msg">*N° déjà utilisé</span>
+                            
+                            <input id="numPiece" class="form-control" type="text" name="numPiece" required="required" th:value="${agent.numPiece}">
                         </div>
                     </div>
                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                         <div class="form-group">
-                            <label for="nomPere">Nom du père</label> 
-                            <span class="error-msg" id="nomPere-error-msg"></span>                            
-                            <input id="nomPere" class="form-control" type="text" name="nomPere">
+                            <div>
+                                <label for="nomPere">Nom du père</label> 
+                                <span class="error-msg" id="nomPere-error-msg"></span>
+                            </div>                            
+                            <input id="nomPere" class="form-control" type="text" name="nomPere" th:value="${agent.nomPere}">
                         </div>
                     </div>
                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
                         <div class="form-group">
                             <label for="nomMere">Nom de la mère</label> 
                             <span class="error-msg" id="nomMere-error-msg"></span>                            
-                            <input id="nomMere" class="form-control" type="text" name="nomMere">
+                            <input id="nomMere" class="form-control" type="text" name="nomMere" th:value="${agent.nomMere}">
                         </div>
                     </div>                                   
                                       
