--- a/src/main/resources/templates/fragments/layout/dependancies.html
+++ b/src/main/resources/templates/fragments/layout/dependancies.html
@@ -25,6 +25,9 @@
         <th:block th:fragment="js-dependancies">
             <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!--             <script scr="/lib/jquery/jquery.min.js"></script>
+            <script scr="/lib/bootstrap/js/bootstrap.min.js"></script> -->
+            
             <script src="/lib/jquery-ui-1.9.2.custom.min.js"></script>
             <script src="/lib/jquery.ui.touch-punch.min.js"></script>
             <script class="include" type="text/javascript" src="/lib/jquery.dcjqaccordion.2.7.js"></script>
