--- a/src/main/resources/templates/agent/frm/pieces-jointes-frag.html
+++ b/src/main/resources/templates/agent/frm/pieces-jointes-frag.html
@@ -6,7 +6,7 @@
 		<th:block th:fragment="pieces-jointes-frag">
         	<div class="panel panel-default">
             	<div class="panel-heading"><a href="#pieces-jointes" data-toggle="collapse">Pieces jointes</a></div>
-                <div class="panel-body panel-collapse collapse" id="pieces-jointes">
+                <div class="panel-body panel-collapse collapse in" id="pieces-jointes">
                     <div class="col col-lg-4">
                         <div class="form-group">
                             <label for="noteServiceDAAF">Note de service de la DAAF</label><span class="error-msg text-danger" id="noteServiceDAAF-error-msg"></span>
